# WTop

./: README.md
OutXML/: CMakeLists.txt  main.cpp
WTop/: CMakeLists.txt
WTop/doc/: run_command.txt  temp_.txt
WTop/src/config/: config.cpp  config.hpp  init_config.cpp  init_config.hpp  read_config.cpp  read_config.hpp
WTop/src/console/: main.cpp  mods.txt  opts.h
WTop/src/data/: RM_20190801_NK_F2_02_ms2.msalign
WTop/src/filter/: filter.cpp  filter.hpp  filter_tag_match.cpp  filter_tag_match.hpp  filter_tag_msg.cpp  filter_tag_msg.hpp  filter_tag_string.cpp  filter_tag_string.hpp  ms_protein_filter.cpp  ms_protein_filter.hpp  ptm_filter.cpp  ptm_filter.hpp
WTop/src/merge/: cluster_msalign_protein.cpp  cluster_msalign_protein.hpp  config_argument.cpp  config_argument.hpp  modify.cpp  modify.hpp  msalign_processor.cpp  msalign_processor.hpp  processor_management.cpp  processor_management.h  protein_processor.cpp  protein_processor.hpp  temp_prsm_argument.cpp  temp_prsm_argument.hpp  unknown_ptm_search.cpp  unknown_ptm_search.h  unknown_ptm_utils.cpp  unknown_ptm_utils.h  wtop_prsm_processor.cpp  wtop_prsm_processor.hpp
WTop/src/ms/: complement_ions.cpp  complement_ions.hpp  msalign.cpp  msalign.hpp  msalign_tag.cpp  msalign_tag.hpp
WTop/src/mylib/: calculate_lib.cpp  calculate_lib.h  cwdtw.cpp  cwdtw.h  data_steam.cpp  data_steam.hpp  etd_process.cpp  etd_process.hpp  fun.cpp  fun.h  io.cpp  io.h  ions_path.cpp  ions_path.h  speculate_lib.cpp  speculate_lib.h  terminal_truncation.h  thread_management.cpp  thread_management.hpp
WTop/src/protein/: filter_protein.cpp  filter_protein.h  protein.cpp  protein.hpp
WTop/src/prsm/: candi_truncation.cpp  candi_truncation.h  candidate_prsm.cpp  candidate_prsm.hpp  prsm_alignment_filter.cpp  prsm_alignment_filter.hpp  prsm_alignment_filter_var.cpp  prsm_alignment_filter_var.hpp  prsm_cwdtw.cpp  prsm_cwdtw.hpp  prsm_ions_location.cpp  prsm_ions_location.hpp  prsm_msg_write.cpp  prsm_msg_write.hpp  prsm_scope_alignment.cpp  prsm_scope_alignment.hpp  prsm_score.cpp  prsm_score.hpp  prsm_store_ptm.h  prsm_terminal_truncation.cpp  prsm_terminal_truncation.hpp  prsm_unknown_ptms.cpp  prsm_unknown_ptms.hpp  prsm_varible_ptms.cpp  prsm_varible_ptms.hpp
WTop/src/ptm/: ptm_combination.cpp  ptm_combination.hpp
WTop/src/thread/: manage_thread.cpp  manage_thread.hpp
WTop/src/util/: Argument.cpp  Argument.h  Service.cpp  Service.h  WriteResultUtils.cpp  WriteResultUtils.h  exception.cpp  exception.h  matrix.h  ppm_value.cpp  ppm_value.hpp  qsort.cpp  qsort.h  string_utils.cpp  string_utils.h  xmlUtil.cpp  xmlUtil.h
WTop/src/wavelib/: .gitignore  CMakeLists.txt
WTop/src/wavelib/header/: wavelib.h
WTop/src/wavelib/src/: CMakeLists.txt  conv.c  real.c  wavefilt.c  wavefilt.h  wtmath.c  wtmath.h
WTop/src/wavelib/test/: cwttest.c  dwpttest.c  dwttest.c  modwttest.c  s1.txt  swttest.c  wtreetest.c
WTop/src/wavelib/unitTests/: CMakeLists.txt
WTop/src/wavelib/unitTests/wavelibBoostTests/: BoostTest.cpp  BoostTest.h  CMakeLists.txt  tst_dwt.cpp
WTop_RF_Score/: LoadModel_RF.ipynb  RFModelTrain.ipynb  WTop_RF_Score.ipynb
data/deconvMS/: Experiment_4_620_F5_01_ms2.msalign  Experiment_4_620_F5_02_ms2.msalign  Fraction_10_ms2.msalign  Fraction_11_ms2.msalign  RM_20190801_NK_F2_01_ms2.msalign  RM_20190801_NK_F2_02_ms2.msalign
data/prsm/TopMG/: F2_01.tsv  F2_02.tsv  F2_1.tsv  F2_2.tsv  F5_01.tsv  F5_02.tsv  F8_1.tsv  F8_2.tsv  Fraction_10.tsv  Fraction_11.tsv
data/prsm/TopPIC/: F2_01.tsv  F2_02.tsv  F2_1.tsv  F2_2.tsv  F5_01.tsv  F5_02.tsv  F8_1.tsv  F8_2.tsv  Fraction_10.tsv  Fraction_11.tsv
data/prsm/WTop/: F2_01_output.csv  F2_02_output.csv  F2_1_output.csv  F2_2_output.csv  F5_02_output.csv  F8_1_output.csv  F8_2_output.csv  Fraction_10_output.csv  Fraction_11_output.csv
